@@ -23,5 +23,3 @@ basic information.
 Lisp that have counterparts in many programming languages, and later
 chapters describe features that are peculiar to Emacs Lisp or relate
 specifically to editing.
-
-  This is edition 2.5.
